--- a/main.html
+++ b/main.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I'm not a robot</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main>
-      <!-- solution start -->
-      
-      <!-- solution end -->
-    </main>
-    <script src="./script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>I'm Not a Robot</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
+
+  <div id="image-container"></div>
+
+  <div id="buttons">
+    <button id="reset" style="display: none;">Reset</button>
+    <button id="verify" style="display: none;">Verify</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
